# watchtower

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODOS.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py
api/tests/: test_api_monitors.py  test_cron_schedule.py  test_db_smoke.py  test_health.py  test_internal_tick.py  test_money_parse.py  test_schedule_nl.py  test_tick_runner.py
api/watchtower_api/: __init__.py  config.py  deps.py  main.py
api/watchtower_api/db/: __init__.py  session.py
api/watchtower_api/models/: __init__.py  monitor.py  notification.py  price_snapshot.py  run.py  user.py
api/watchtower_api/routers/: internal.py  internal_auth.py  monitors.py  schedule.py
api/watchtower_api/schemas/: monitor.py  schedule.py
api/watchtower_api/services/: cron_schedule.py  email_resend.py  extract_price.py  fetch_product.py  google_token.py  money_parse.py  schedule_nl.py  tick_runner.py  users.py
docs/: BRANCH_PROTECTION.md
docs/plans/: 00-decisions.md  README.md  gcp-terraform.md  product-brainstorm-2026-03-22.md  v1-eng-implementation-plan.md  v1-merchandise-price-monitoring.md
docs/templates/: github-actions-ci.yml
terraform/: README.md
terraform/environments/staging/: main.tf  variables.tf
web/: .env.example  README.md  index.html  package-lock.json  vite.config.ts
web/src/: App.css  App.tsx  api.ts  auth.tsx  google-gis.d.ts  index.css
(+2 files in other folders)
